--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,10 @@ dependencies {
 
     def room_version = "2.3.0"
 
-    implementation("androidx.room:room-runtime:$room_version")
-    kapt("androidx.room:room-compiler:$room_version")
-    implementation("androidx.room:room-ktx:$room_version")
+    implementation "androidx.room:room-runtime:2.5.0"
+    kapt "androidx.room:room-compiler:2.5.0"
+    implementation "androidx.room:room-ktx:2.5.0"
+    implementation "androidx.room:room-paging:2.5.0"
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
